[package]
name = "oci-sdk"
version = "0.4.0"
edition = "2021"
description = "Oracle Cloud Infrastructure SDK for Rust Lang"
license = "MIT"
repository = "https://github.com/digital-divas/oci-rust-sdk"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
aws-lc-rs = { version = "1.13", features = ["ring-io", "ring-sig-verify"] }
base64 = "0.22"
sha2 = "0.10"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
home = "0.5"
configparser = "3.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"
pem = "3.0"
urlencoding = "2.1"

[dev-dependencies]
gethostname = "0.4"
futures = "0.3"

[[example]]
name = "instance_principal_example"
path = "examples/instance_principal_example.rs"

[[example]]
name = "oke_workload_identity_example"
path = "examples/oke_workload_identity_example.rs"
