[package]
name = "oci-sdk"
version = "0.4.0"
edition = "2021"
description = "Oracle Cloud Infrastructure SDK for Rust Lang"
license = "MIT"
repository = "https://github.com/digital-divas/oci-rust-sdk"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
aws-lc-rs = { version = "1.13", features = ["ring-io", "ring-sig-verify"] }
base64 = "0.22"
sha2 = "0.10"
sha1 = "0.10"
x509-parser = "0.16"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
home = "0.5"
configparser = "3.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"
pem = "3.0"
urlencoding = "2.1"
bytes = "1"
tracing = "0.1"
clap = { version = "4", features = ["derive"], optional = true }
indicatif = { version = "0.17", optional = true }

[dev-dependencies]
gethostname = "0.4"
futures = "0.3"

[features]
default = []
cli = ["dep:clap", "dep:indicatif"]

[[bin]]
name = "oci-dataflow"
path = "src/bin/dataflow.rs"
required-features = ["cli"]

[[bin]]
name = "oci-objectstorage"
path = "src/bin/objectstorage.rs"
required-features = ["cli"]

[[example]]
name = "instance_principal_example"
path = "examples/instance_principal_example.rs"

[[example]]
name = "oke_workload_identity_example"
path = "examples/oke_workload_identity_example.rs"
